<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayActivity">

    <TextView
        android:id="@+id/textView_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomNum1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/myAnswer_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textView_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomNum2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/myAnswer_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/myAnswer_editText"
        android:layout_width="257dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/hinAnswer"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/checkAnswer"
        android:layout_width="223dp"
        android:layout_height="51dp"
        android:onClick="calculateNumber"
        android:text="@string/checkAnswer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myAnswer_editText" />

    <TextView
        android:id="@+id/textField_Operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusOperation"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/myAnswer_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="139dp"
        android:layout_height="32dp"
        android:text="@string/textAnswerIs"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myAnswer_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

</androidx.constraintlayout.widget.ConstraintLayout>